deploy: 95eef0d7061b8076b735467c4f23326eb708e899

--- a/ch03/lesson_05.html
+++ b/ch03/lesson_05.html
@@ -215,7 +215,7 @@
 <p>심볼 이름으로 대문자나 소문자를 사용하는 것은 문제가 되지 않습니다. 내부적으로, 리스프는 심볼 이름에 있는 모든 알파벳 문자들을 보통은 대문자로 바꾸며, 리스프 리더 속에 있는 플레그를 설정하여 이 기본 설정을 제어할 수 있습니다.
 레슨 10 [p 65](또한 31장 [p 247]참조)에서 패키지에 대해 배운다면, 스펠은 같지만 동일하지는 않는 심볼 이름을 만들 수 있습니다. 지금 알아야 할것은 <code>:</code> 로 표시된 심볼은 특별하게 취급한다 라는 것입니다.</p>
 <h2 id="심볼로-값에-이름-붙일-수-있다"><a class="header" href="#심볼로-값에-이름-붙일-수-있다">심볼로 값에 이름 붙일 수 있다.</a></h2>
-<p>심볼의 자기 자신을 표현하는 능력 역시 유용하지만, 더욱 일반적으로 사용되는 곳은 값의 이름을 붙일 때입니다. 이는 다른 프로그래밍 언어에서 변수와 함수 이름의 역활을 맡습니다. 리스프 심볼은 값의 이름이나, 함수의 이름을 지을때 사용됩니다.</p>
+<p>심볼의 자기 자신을 표현하는 능력 역시 유용하지만, 더욱 일반적으로 사용되는 곳은 값의 이름을 붙일 때입니다. 이는 다른 프로그래밍 언어에서 변수와 함수 이름의 역활을 맡습니다. 리스프 심볼은 값의 이름이나, 함수의 이름을 지을 때 사용됩니다.</p>
 <p>리스프에서 특이한 점 중 하나는 심볼은 함수랑 변수의 값을 동시에 지닐 수 있다 라는 점 입니다:</p>
 <pre><code class="language-lisp">(setq first 'number-one)
 ;;=&gt; NUMBER-ONE
@@ -227,11 +227,11 @@ first
 ;;=&gt; NUMBER-ONE
 </code></pre>
 <p>첫번째와 마지막 경우에서의 <code>first</code>는 <strong>변수</strong> 이며 , 두번째인 경우는 리스프에 의해 미리 정의된 <strong>함수</strong> 라는 점을 주의깊게 보시길 바랍니다. 리스프는 심볼이 보이는 곳에 기반하여 이 값이 무엇인지 결정합니다. 평가 규칙에 따라 값을 요청받으면, 리스프는 심볼의 변수 값을 찾습니다. 함수를 요청받으면, 리스프는 심볼의 함수 값을 찾습니다.</p>
-<p>심볼은 변수나 함수의 값 외에 다른 값을 가질 수 있습니다. 심볼은 문서, 프로퍼티 리스트(property list) 혹은 출력시 표시되는 값을 가질 수 있습니다. 심볼의 문서는 해당 심볼의 설명을 위한 텍스트입니다. <code>documentation</code> 폼을 사용하거나 심볼의 값을 정의하는 몇몇 폼에서 심볼에 대한 문서를 만들 수 있습니다. 심볼은 다양한 의미를 가질 수 있으므로 함수 및 변수와 같이 여러 가지 의미에 맞는 각각에 대한 문서를 만들 수 있습니다.</p>
+<p>심볼은 변수나 함수의 값 외에 다른 값을 가질 수 있습니다. 심볼은 문서, 프로퍼티 리스트(property list) 혹은 출력시 표시되는 값을 가질 수 있습니다. 심볼의 문서는 해당 심볼의 설명을 위한 텍스트입니다. <code>documentation</code> 폼을 사용하거나 심볼의 값을 정의하는 몇몇 폼에서 심볼에 대한 문서도 같이 만들 수 있습니다. 심볼은 다양한 의미를 가질 수 있으므로 함수 및 변수와 같이 여러 가지 의미에 맞는 각각에 대한 문서를 만들 수 있습니다.</p>
 <p>프로퍼티 리스트는 엔트리(entry)당 하나의 키를 지닌 자그마한 데이터 베이스와 같습니다. 레슨 10 [p 65]에서 이러한 심볼의 사용법을 살펴볼 것입니다.</p>
-<p>출력 이름은 리스프에서 심볼을 출력하기 위해 사용하는 것입니다. 일반적으로 이 이름을 변경하지 않는게 좋습니다; 다른 이름으로 변경한다면, 다른 이름으로 출력된 결과를 리스프가 다시 읽어때 원래 심볼값과 다른 의미를 지녀 혼란을 야기할 것입니다.</p>
+<p>출력 이름은 리스프에서 심볼을 출력하기 위해 사용하는 것입니다. 일반적으로 이 이름을 변경하지 않는게 좋습니다; 다른 이름으로 변경한다면, 다른 이름으로 출력된 결과를 리스프가 다시 읽어들일때 원래 심볼값과 다른 의미로 받아들여 혼란을 야기할 것입니다.</p>
 <h2 id="값은-하나-이상의-이름을-가질-수-있다"><a class="header" href="#값은-하나-이상의-이름을-가질-수-있다">값은 하나 이상의 이름을 가질 수 있다</a></h2>
-<p>값은 하나 이상의 이름을 가질 수 있습니다. 즉, 하나 이상의 심볼이 값을 공유할 수 있다는 것입니다. 다른 언어에서 이러한 방식으로 동작하는 것으로는 포인터가 있습니다. 리스프는 프로그래머에게 포인터를 노출하지 않지만, 공유되어 사용되는 오브젝트들이 있습니다. <code>eq</code> 테스트로 오브젝트가 서로 같은지 확인할 수 있습니다. 다음에 나오는 것을 살펴보시기 바랍니다:</p>
+<p>값은 하나 이상의 이름을 가질 수 있습니다. 즉, 하나 이상의 심볼이 동일한 값을 공유할 수 있다는 것입니다. 다른 언어에서 이러한 방식으로 동작하는 것으로는 포인터가 있습니다. 리스프는 프로그래머에게 포인터를 노출하진 않지만, 공유되어 사용되는 오브젝트들이 있습니다. <code>eq</code> 테스트로 오브젝트가 서로 같은지 확인할 수 있습니다. 다음에 나오는 것을 살펴보시기 바랍니다:</p>
 <pre><code class="language-lisp">(setq L1 (list 'a 'b 'c))
 ;;=&gt; (A B C)
 
@@ -248,7 +248,7 @@ first
 ;;=&gt; NIL
 </code></pre>
 <p>여기서, 동일한 값을 <code>L1</code>과 <code>L2</code>라 이름지엇기에, <code>L1</code>과 <code>L2</code>는 <code>eq</code>합니다. 다시 말하자면 <code>(list 'a 'b 'c)</code> 폼에 의해 생성된 값은 <code>L1</code>과 <code>L2</code>라는 두개의 이름을 갖습니다. <code>(setq L2 L1)</code> 폼은  &quot;L2의 값이 L1의 값이 되도록 해라&quot; 라고 지시합니다. 값의 복사를 말 하는게 아니라, 값 그 자체를 지칭합니다. 따라서 <code>L1</code>과 <code>L2</code>는 동일한 값 (처음 <code>L1</code>에 할당된 리스트 <code>(A B C)</code>)을 공유합니다.</p>
-<p>또한 <code>L3</code>도 리스트 <code>(A B C)</code>를 값으로 갖지만, 이는 <code>L1</code>과 <code>L2</code>가 공유하는 것과는 다른 새로운 리스트 입니다. 비록 <code>L3</code>의 값이 <code>L1</code>과 <code>L2</code>의 값과 동일한 것처럼 보이지만, 다른 <code>list</code> 폼에 의해 생성되었기에, 이는 다른 리스트입니다. 따라서, 서로 심볼 <code>A</code>, <code>B</code>, <code>C</code>로 구성된 리스트이지만, 다른 리스트이기에, <code>(eq L3 L1)</code>는 <code>NIL</code>이 됩니다.</p>
+<p>또한 <code>L3</code>도 리스트 <code>(A B C)</code>를 값으로 갖지만, 이는 <code>L1</code>과 <code>L2</code>가 공유하는 것과는 다른 새로운 리스트 입니다. 비록 <code>L3</code>의 값이 <code>L1</code>과 <code>L2</code>의 값과 동일한 것처럼 보이지만, 다른 <code>list</code> 폼에 의해 생성되었기에, 이는 다른 리스트입니다. 따라서, 서로 심볼 <code>A</code>, <code>B</code>, <code>C</code>로 구성된 리스트이지만, 다른 리스트이기에 <code>(eq L3 L1)</code>는 <code>NIL</code>이 됩니다.</p>
 <h2 id="짚고-넘어가기"><a class="header" href="#짚고-넘어가기">짚고 넘어가기</a></h2>
 <ul>
 <li><code>eq</code></li>
