--- a/print.html
+++ b/print.html
@@ -720,7 +720,7 @@ a
 <p>심볼 이름으로 대문자나 소문자를 사용하는 것은 문제가 되지 않습니다. 내부적으로, 리스프는 심볼 이름에 있는 모든 알파벳 문자들을 보통은 대문자로 바꾸며, 리스프 리더 속에 있는 플레그를 설정하여 이 기본 설정을 제어할 수 있습니다.
 레슨 10 [p 65](또한 31장 [p 247]참조)에서 패키지에 대해 배운다면, 스펠은 같지만 동일하지는 않는 심볼 이름을 만들 수 있습니다. 지금 알아야 할것은 <code>:</code> 로 표시된 심볼은 특별하게 취급한다 라는 것입니다.</p>
 <h2 id="심볼로-값에-이름-붙일-수-있다"><a class="header" href="#심볼로-값에-이름-붙일-수-있다">심볼로 값에 이름 붙일 수 있다.</a></h2>
-<p>심볼의 자기 자신을 표현하는 능력 역시 유용하지만, 더욱 일반적으로 사용되는 곳은 값의 이름을 붙일 때입니다. 이는 다른 프로그래밍 언어에서 변수와 함수 이름의 역활을 맡습니다. 리스프 심볼은 값의 이름이나, 함수의 이름을 지을때 사용됩니다.</p>
+<p>심볼의 자기 자신을 표현하는 능력 역시 유용하지만, 더욱 일반적으로 사용되는 곳은 값의 이름을 붙일 때입니다. 이는 다른 프로그래밍 언어에서 변수와 함수 이름의 역활을 맡습니다. 리스프 심볼은 값의 이름이나, 함수의 이름을 지을 때 사용됩니다.</p>
 <p>리스프에서 특이한 점 중 하나는 심볼은 함수랑 변수의 값을 동시에 지닐 수 있다 라는 점 입니다:</p>
 <pre><code class="language-lisp">(setq first 'number-one)
 ;;=&gt; NUMBER-ONE
@@ -732,11 +732,11 @@ first
 ;;=&gt; NUMBER-ONE
 </code></pre>
 <p>첫번째와 마지막 경우에서의 <code>first</code>는 <strong>변수</strong> 이며 , 두번째인 경우는 리스프에 의해 미리 정의된 <strong>함수</strong> 라는 점을 주의깊게 보시길 바랍니다. 리스프는 심볼이 보이는 곳에 기반하여 이 값이 무엇인지 결정합니다. 평가 규칙에 따라 값을 요청받으면, 리스프는 심볼의 변수 값을 찾습니다. 함수를 요청받으면, 리스프는 심볼의 함수 값을 찾습니다.</p>
-<p>심볼은 변수나 함수의 값 외에 다른 값을 가질 수 있습니다. 심볼은 문서, 프로퍼티 리스트(property list) 혹은 출력시 표시되는 값을 가질 수 있습니다. 심볼의 문서는 해당 심볼의 설명을 위한 텍스트입니다. <code>documentation</code> 폼을 사용하거나 심볼의 값을 정의하는 몇몇 폼에서 심볼에 대한 문서를 만들 수 있습니다. 심볼은 다양한 의미를 가질 수 있으므로 함수 및 변수와 같이 여러 가지 의미에 맞는 각각에 대한 문서를 만들 수 있습니다.</p>
+<p>심볼은 변수나 함수의 값 외에 다른 값을 가질 수 있습니다. 심볼은 문서, 프로퍼티 리스트(property list) 혹은 출력시 표시되는 값을 가질 수 있습니다. 심볼의 문서는 해당 심볼의 설명을 위한 텍스트입니다. <code>documentation</code> 폼을 사용하거나 심볼의 값을 정의하는 몇몇 폼에서 심볼에 대한 문서도 같이 만들 수 있습니다. 심볼은 다양한 의미를 가질 수 있으므로 함수 및 변수와 같이 여러 가지 의미에 맞는 각각에 대한 문서를 만들 수 있습니다.</p>
 <p>프로퍼티 리스트는 엔트리(entry)당 하나의 키를 지닌 자그마한 데이터 베이스와 같습니다. 레슨 10 [p 65]에서 이러한 심볼의 사용법을 살펴볼 것입니다.</p>
-<p>출력 이름은 리스프에서 심볼을 출력하기 위해 사용하는 것입니다. 일반적으로 이 이름을 변경하지 않는게 좋습니다; 다른 이름으로 변경한다면, 다른 이름으로 출력된 결과를 리스프가 다시 읽어때 원래 심볼값과 다른 의미를 지녀 혼란을 야기할 것입니다.</p>
+<p>출력 이름은 리스프에서 심볼을 출력하기 위해 사용하는 것입니다. 일반적으로 이 이름을 변경하지 않는게 좋습니다; 다른 이름으로 변경한다면, 다른 이름으로 출력된 결과를 리스프가 다시 읽어들일때 원래 심볼값과 다른 의미로 받아들여 혼란을 야기할 것입니다.</p>
 <h2 id="값은-하나-이상의-이름을-가질-수-있다"><a class="header" href="#값은-하나-이상의-이름을-가질-수-있다">값은 하나 이상의 이름을 가질 수 있다</a></h2>
-<p>값은 하나 이상의 이름을 가질 수 있습니다. 즉, 하나 이상의 심볼이 값을 공유할 수 있다는 것입니다. 다른 언어에서 이러한 방식으로 동작하는 것으로는 포인터가 있습니다. 리스프는 프로그래머에게 포인터를 노출하지 않지만, 공유되어 사용되는 오브젝트들이 있습니다. <code>eq</code> 테스트로 오브젝트가 서로 같은지 확인할 수 있습니다. 다음에 나오는 것을 살펴보시기 바랍니다:</p>
+<p>값은 하나 이상의 이름을 가질 수 있습니다. 즉, 하나 이상의 심볼이 동일한 값을 공유할 수 있다는 것입니다. 다른 언어에서 이러한 방식으로 동작하는 것으로는 포인터가 있습니다. 리스프는 프로그래머에게 포인터를 노출하진 않지만, 공유되어 사용되는 오브젝트들이 있습니다. <code>eq</code> 테스트로 오브젝트가 서로 같은지 확인할 수 있습니다. 다음에 나오는 것을 살펴보시기 바랍니다:</p>
 <pre><code class="language-lisp">(setq L1 (list 'a 'b 'c))
 ;;=&gt; (A B C)
 
@@ -753,7 +753,7 @@ first
 ;;=&gt; NIL
 </code></pre>
 <p>여기서, 동일한 값을 <code>L1</code>과 <code>L2</code>라 이름지엇기에, <code>L1</code>과 <code>L2</code>는 <code>eq</code>합니다. 다시 말하자면 <code>(list 'a 'b 'c)</code> 폼에 의해 생성된 값은 <code>L1</code>과 <code>L2</code>라는 두개의 이름을 갖습니다. <code>(setq L2 L1)</code> 폼은  &quot;L2의 값이 L1의 값이 되도록 해라&quot; 라고 지시합니다. 값의 복사를 말 하는게 아니라, 값 그 자체를 지칭합니다. 따라서 <code>L1</code>과 <code>L2</code>는 동일한 값 (처음 <code>L1</code>에 할당된 리스트 <code>(A B C)</code>)을 공유합니다.</p>
-<p>또한 <code>L3</code>도 리스트 <code>(A B C)</code>를 값으로 갖지만, 이는 <code>L1</code>과 <code>L2</code>가 공유하는 것과는 다른 새로운 리스트 입니다. 비록 <code>L3</code>의 값이 <code>L1</code>과 <code>L2</code>의 값과 동일한 것처럼 보이지만, 다른 <code>list</code> 폼에 의해 생성되었기에, 이는 다른 리스트입니다. 따라서, 서로 심볼 <code>A</code>, <code>B</code>, <code>C</code>로 구성된 리스트이지만, 다른 리스트이기에, <code>(eq L3 L1)</code>는 <code>NIL</code>이 됩니다.</p>
+<p>또한 <code>L3</code>도 리스트 <code>(A B C)</code>를 값으로 갖지만, 이는 <code>L1</code>과 <code>L2</code>가 공유하는 것과는 다른 새로운 리스트 입니다. 비록 <code>L3</code>의 값이 <code>L1</code>과 <code>L2</code>의 값과 동일한 것처럼 보이지만, 다른 <code>list</code> 폼에 의해 생성되었기에, 이는 다른 리스트입니다. 따라서, 서로 심볼 <code>A</code>, <code>B</code>, <code>C</code>로 구성된 리스트이지만, 다른 리스트이기에 <code>(eq L3 L1)</code>는 <code>NIL</code>이 됩니다.</p>
 <h2 id="짚고-넘어가기-5"><a class="header" href="#짚고-넘어가기-5">짚고 넘어가기</a></h2>
 <ul>
 <li><code>eq</code></li>
@@ -764,7 +764,7 @@ first
 </ul>
 <h2 id="바인딩은-값을-담을-새로운-공간을-만든다"><a class="header" href="#바인딩은-값을-담을-새로운-공간을-만든다">바인딩은 값을 담을 새로운 공간을 만든다</a></h2>
 <p>리스프는 종종, 변수의 값을 담기 위해 새로이 메모리를 할당하여 <strong>바인딩을 만듭니다</strong>. 바인딩은 변수의 렉시컬 스코프(lexical scope) 구현을 위한 매우 일반적인 매커니즘이지만, 바인딩의 라이프타임에 따라 다른 용도로도 사용됩니다. 8장[p 126]에서 라이프타임(lifetime)과 가시성(visibility)를 공부할때 이를 다시 논할 것입니다.</p>
-<p>예, 리스프는 새로운 바인딩을 위해 저장공간을 할당합니다. 이것이 끔찍하게 비효율적인 것처럼 보일지라도, 리스프가 어디에 저장공간을 할당하는지에 대해서는 아직 알 수 가 없습니다. 예를들어, 리스프는 함수 인자를 실제 값으로 바인드하지만, 다른 프로그래밍 언어들처럼 스택에 저장공간을 할당합니다. 리스프는, 바인딩 폼의 실행을 마치면 종료되는, 라이프타임을 바인딩이 지녔는지를 판단치 못하면 바인딩을 힙(heap)에 생성합니다</p>
+<p>리스프는 새로운 바인딩을 위해 저장공간을 할당합니다. 이것이 끔찍하게 비효율적인 것처럼 보이지만, 아직 리스프가 어디에 저장공간을 할당하는지에 대해서는 알 수 가 없습니다. 예를들어, 리스프는 함수 인자를 값으로 바인드할때, 다른 프로그래밍 언어들처럼 스택(stack)에 저장공간을 할당합니다. 리스프는 바인딩의 라이프타임을 판단할 수 없으면 해당 바인딩을 힙(heap)에 생성합니다.</p>
 <h2 id="바인딩은-이름을-가진다"><a class="header" href="#바인딩은-이름을-가진다">바인딩은 이름을 가진다</a></h2>
 <p>리스프는 각 바인딩마다 이름을 부여합니다. 만일 그렇지 않다면, 프로그램은 어떻게 바인딩을 참조할 수 있을까요? 간단하게, 어? 잠시만요...</p>
 <h2 id="바인딩은-동시에-다른-값을-가질-수-있다"><a class="header" href="#바인딩은-동시에-다른-값을-가질-수-있다">바인딩은 동시에 다른 값을 가질 수 있다.</a></h2>
@@ -774,7 +774,8 @@ first
       (let ((a 3))
          ...)))
 </code></pre>
-<p>여기서, (...으로 표시된) 가장 안쪽의 <code>let</code>에 도착할 쯤에는, <code>a</code>는 3개의 서로 다른 바인딩을 가지게 됩니다. 단, 위 예제가 전형적인 리스프 코드라고 말하는 것은 결코 아닙니다.</p>
+<p>여기서, (...으로 표시된) 가장 안쪽의 <code>let</code>에 도착할 쯤에는, <code>a</code>는 3개의 서로 다른 바인딩을 가지게 됩니다.</p>
+<p>단, 위 예제가 전형적인 리스프 코드라고 말하는 것은 결코 아닙니다.</p>
 <h2 id="가장-가까운-바인딩"><a class="header" href="#가장-가까운-바인딩">가장 가까운 바인딩</a></h2>
 <pre><code class="language-lisp">;; 여기서는, A는 바인딩 되지 않습니다.
 
@@ -788,7 +789,7 @@ first
          ;; 여기서 A의 가장 가까운 바인딩은 값 3을 갖습니다.
          ...)))
 </code></pre>
-<p>보시다시피, 가장 가까운 바인딩이란 상대적인 위치를 가집니다. 바인딩 폼이 어떻게 중첩되었는지 살펴보면 (위에서 보인것처럼 여러분의 코드를 들여쓰기하였다면 이를 하기에 쉬울 것입니다), 어떻게 프로그램이 바인딩에 액세스하는지 알 수 있습니다.</p>
+<p>보시다시피, 가장 가까운 바인딩이란 상대적인 위치를 가집니다. 바인딩 폼이 어떻게 중첩되었는지 살펴보면 (위에서 보인것처럼 여러분의 코드를 들여쓰기하였다면 이를 하기에 쉬울 것입니다), 어떻게 프로그램이 바인딩에 접근하는지 알 수 있습니다.</p>
 <p>한가지 더 여러분이 알아야 할것은, 내부 바인딩 폼이 동일한 심볼을 바인드하지 않는 한, 내부 바인딩 폼에서도 외부 바인딩이 여전히 유효하다는 점 입니다:</p>
 <pre><code class="language-lisp">;; 여기서, A와 B는 바인딩 되지 않습니다.
 
@@ -823,9 +824,10 @@ first
 <p><code>setq</code> 폼은 이미 존재하는 바인딩 값을 바꿉니다:</p>
 <pre><code class="language-lisp">(let ((z 1))
    ;; 여기서, Z의 가장 가까운 바인딩은 값 1을 지닙니다.
-   (setq z 9)
 
+   (setq z 9)
    ;; 이제 값 Z는 9입니다.
+
    (let ((z 2))
       ;; 여기서, Z의 가장 가까운 바인딩은 값 2을 지닙니다.
       ...)
@@ -834,8 +836,8 @@ first
    ;; 다시 Z의 외부 바인딩 값 9을 보게됩니다.
    ...)
 </code></pre>
-<p>위의 <code>setq</code> 폼은, 바깥쪽 <code>let</code> 폼에서 정의된 <code>z</code>의 바인딩값을 바꿉니다. 이는 종종 좋지 않은 일을 야기합니다. 문제라고 생각되는 점은 <code>z</code>의 값을 확인하기 위해 살펴봐야만 하는 곳이 이제 두 곳으로 늘어났다는 것입니다 - 첫번째는 바인딩 폼, 그 다음은 <code>setq</code>로 할당한 코드. 들여쓰기를 활용하는 바인딩 폼과는 달리, 프로그램의 본체 부분에서 할당하는 폼을 위한 들여쓰기는 없습니다; 프로그램을 읽을때 이러한 부분을 찾아내는것이 어렵습니다.</p>
-<p>저희는 이전 예제에서 봤던것과 같이 새로운 바인딩을 도입하여 매우 쉽게 할당하는 코드를 우회할 수 있습니다.</p>
+<p>위의 <code>setq</code> 폼은, 바깥쪽 <code>let</code> 폼에서 정의된 <code>z</code>의 바인딩값을 바꿉니다. 이는 종종 좋지 않은 일을 불러옵니다. 문제라고 생각되는 점은 <code>z</code>의 값을 확인하기 위해 살펴봐야만 하는 곳이 이제 두 곳으로 늘어났다는 것입니다 - 첫번째는 바인딩 폼, 그 다음은 <code>setq</code>로 할당한 코드. 들여쓰기를 활용하는 바인딩 폼과는 달리, 프로그램의 본체 부분에서 할당하는 폼에는 따로 들여쓰기가 없습니다; 프로그램을 읽을때 이러한 부분을 찾아내는것이 어렵습니다.</p>
+<p>이전 예제에서 봤던것과 같이 새로운 바인딩을 도입하여 매우 쉽게 할당하는 코드를 우회할 수 있습니다.</p>
 <pre><code class="language-lisp">(let ((z 1))
    ;; 여기서, Z의 가장 가까운 바인딩은 값 1을 지닙니다.
 
@@ -853,7 +855,7 @@ first
    ;; 여기서, 가장 바깥쪽 바인딩 값 1이 Z의 바인딩 값이 됩니다.
    ...)
 </code></pre>
-<p>이제 <code>let</code>폼의 들여쓰기로 인해 <code>z</code>의 모든 바인딩을 알아보기 쉬워졌습니다. 프로그램을 읽는 동안, 프로그램의 어느 지점에서(예제에서는 ...에서) Z의 올바른 바인딩을 찾기위해 여러분이 해야할 일은 들여쓰기를 주의하여 상위 레벨에 있는 <code>let</code> 폼을 찾아보는 것입니다.</p>
+<p>이제 <code>let</code>폼의 들여쓰기로 인해 <code>z</code>의 모든 바인딩을 알아보기 쉬워졌습니다. 프로그램의 어느 지점에서(예제에서는 ...에서) <code>z</code>의 올바른 바인딩을 찾기 위해 여러분이 해야할 일은 프로그램을 읽을 시 들여쓰기를 주의하여 상위 레벨에 있는 <code>let</code> 폼을 찾아보는 것입니다.</p>
 <p><code>let</code> 폼으로 둘러싸여 있지 않는 곳에서 <code>setq</code> 폼이 어떠한 변수를 할당하고 있다면, 이는 전역 변수이거나 특수(special) 변수일 것입니다.</p>
 <p>전역 변수는 다른 바인딩으로 가려지지 않는한 어느곳에서나 접근이 가능하며, 리스프 시스템이 동작하는 동안 사용할 수 있습니다. 특수(special) 변수는 8장[p 126]에서 살펴볼 것입니다.</p>
 <pre><code class="language-lisp">(setq a 987)
@@ -891,8 +893,8 @@ first
 <li>인자 이름 리스트: 이것이 호출되엇을시 함수의 인자가 될 <code>(the-number)</code></li>
 <li>함수의 본체: <code>(let ...)</code></li>
 </ol>
-<p>3개 모두 각각 그 그대로 나타내어야 하므로, <code>defun</code>은 인자를 평가하지 않습니다 (만일 평가를 수행한다면, 각 인자에 <code>quote</code>를 붙여야만 하는 불편함이 생길 것입니다).</p>
-<p><code>defun</code>은 정의된 함수 이름을 반환하고, 여러분이 제공한 이름, 인자 리스트, 본체를 이용하여 전역으로 정의를 선언합니다. <code>defun</code>을 이용하여 함수를 만들면, 바로 이를 사용할 수 있습니다:</p>
+<p>3개 모두 각각 그 그대로 나타내어야 하므로, <code>defun</code>은 인자를 평가하지 않습니다 (만일 평가가 수행되었다면, 각 인자에 <code>quote</code>를 붙여야만 하는 불편함이 생길 것입니다).</p>
+<p><code>defun</code>은 정의된 함수 이름을 반환하고, 여러분이 제공한 이름, 인자 리스트, 본체를 이용하여 함수의 정의를 전역으로 선언합니다. <code>defun</code>을 이용하여 함수를 만들고 나면 바로 이를 사용할 수 있습니다:</p>
 <pre><code class="language-lisp">(secret-number 11)
 ;;=&gt; TOO-LOW
 
@@ -902,7 +904,7 @@ first
 (secret-number 37)
 ;;=&gt; THAT-IS-THE-SECRET-NUMBER
 </code></pre>
-<p>함수를 호출할때, 이것의 인자는(예. 두번쩨 예제에서 <code>99</code>) 정의에서 사용한 인자 이름(즉. <code>the-umber</code>)에 바인딩이 됩니다. 그런 다음, 함수의 본체 (즉. (LET ...))은 해당 인자의 바인딩 컨텍스트로 평가됩니다. 다른 말로 하자면, <code>(SECRET-NUMBER 99)</code>를 평가하는 것은 변수 <code>THE-NUMBER</code>로 <code>99</code>가 바인딩 된체 <code>SECRET-NUMBER</code> 함수 본체를 실행하도록 만들어 줍니다.</p>
+<p>함수를 호출할때, 이것의 인수는(예. 두번쩨 예제에서 <code>99</code>) 정의에서 사용한 인자 이름(즉. <code>the-umber</code>)에 바인딩이 됩니다. 그런 다음, 함수의 본체 (즉. (LET ...))은 해당 인자의 바인딩 컨텍스트로 평가됩니다. 다른 말로 하자면, <code>(SECRET-NUMBER 99)</code>를 평가하는 것은 <code>99</code>가 변수 <code>THE-NUMBER</code>로 바인딩 된체 <code>SECRET-NUMBER</code> 함수 본체를 실행하도록 만들어 줍니다.</p>
 <p>물론, 여러분은 하나 이상의 인자를 지닌 함수를 정의 할 수 있습니다.</p>
 <pre><code class="language-lisp">(defun my-calculation (a b c x)
   (+ (* a (* x x))
@@ -913,15 +915,15 @@ first
 (my-calculation 3 2 7 5)
 ;;=&gt; 92
 </code></pre>
-<p>함수를 호출할때 인수들은, 순서에 맞게 인자 이름에 바인딩 됩니다. 리스프는 인자 이름의 리스트는 여러가지 변형들이 있습니다. 공식적으로 이러한 변형 리스트를 람다 리스트라 부릅니다 - 21장[p 198]에서 이것의 다른 기능들에 대해 살펴 볼 것입니다.</p>
+<p>함수를 호출할때 인수들은 순서에 맞게 인자 이름에 바인딩 됩니다. 리스프는 인자 이름의 리스트는 여러가지 변형들이 있습니다. 공식적으로 이러한 변형 리스트를 람다 리스트라 부릅니다 - 21장[p 198]에서 이것의 다른 기능들에 대해 살펴 볼 것입니다.</p>
 <h2 id="lambda---이름-없는-함수-정의"><a class="header" href="#lambda---이름-없는-함수-정의">LAMBDA - 이름 없는 함수 정의</a></h2>
-<p>때로는 프로그램에서 단 한곳에서만 쓰이는 함수가 필요할 것입니다. <code>defun</code>으로 함수를 만들어 이를 한번만 호출할 수 있습니다. 그리고 때때로, 나중에 프로그램을 읽을때 도움을 주는 잘 짜여진 이름을 함수에 부여할 수 있습니다. 그러나 종종 여러분이 필요한 함수는 아주 사소하거나 아주 명백하여 이름을 굳이 지을 필요가 없거나, 이전에 이름이 쓰였는지에 대해 걱정하지 않고 싶을 때가 있을 것입니다. 이와 같은 상황에서, 리스프에선 <code>lambda</code> 폼을 이용하여 이름 없는 함수를 만들 수 있습니다. <code>lambda</code> 폼은 마치 이름이 없는 <code>defun</code> 폼처럼 보입니다:</p>
+<p>때로는 프로그램에서 단 한곳에서만 쓰이는 함수가 필요할 것입니다. <code>defun</code>으로 함수를 만들어 이를 한번만 호출할 수 있습니다. 그리고 때때로 프로그램을 읽을 때를 도움이 되도록 함수에 잘 짜여진 이름을 부여할 수 도 있습니다. 그러나 종종 여러분이 필요한 함수는 아주 사소하거나 아주 명백하여 이름을 굳이 지을 필요가 없거나, 이전에 같은 이름이 쓰였는지에 대해 걱정하지 않고 싶을 때가 있을 것입니다. 이와 같은 상황에서, 리스프에선 <code>lambda</code> 폼을 이용하여 이름 없는 함수를 만들 수 있습니다. <code>lambda</code> 폼은 마치 이름이 없는 <code>defun</code> 폼처럼 보입니다:</p>
 <pre><code class="language-lisp">(lambda (a b c x)
    (+ (* a (* x x))
       (* b x)
       c))
 </code></pre>
-<p>여기서 <code>lambda</code> 폼을 평가할 수 없습니다; 이는 리스프가 함수 자리라고 예상되어 지는 곳에서만 보여야 합니다 - 보통 폼의 첫번째 요소로;</p>
+<p>여기서 <code>lambda</code> 폼을 평가할 수 없습니다; 이는 리스프가 함수 자리라고 예상되어 지는 곳에서만 보여야 합니다 - 보통 폼의 첫번째 요소;</p>
 <pre><code class="language-lisp">(lambda (a b c x)
      (+ (* a (* x x))
         (* b x)
