--- a/print.html
+++ b/print.html
@@ -952,8 +952,8 @@ first
    body)
 </code></pre>
 <h2 id="매크로는-값이-아닌-폼을-반환한다"><a class="header" href="#매크로는-값이-아닌-폼을-반환한다">매크로는 값이 아닌 폼을 반환한다</a></h2>
-<p>:TODO(pyoung)
-매크로 본체는 평가될 폼을 반환합니다. 다른말로 하자면, 매크로의 본체로 값이 아닌 폼을 반환하도록 작성해야 합니다. 리스프가 매크로의 호출을 평가할때, 이는 우선 매크로 본체 정의를 평가하고, 첫번째 평가의 결과를 평가합니다 (비교하여, 함수의 본체는 값을 반환하도록 평가됩니다) 여기 여러분이 가장 알고자 하는 것을 설명해주는 간단한 매크로 쌍이 있습니다:</p>
+<p>매크로 본체는 평가될 폼을 반환합니다. 다른 말로 하자면, 매크로의 본체로 값이 아닌 폼을 반환하도록 작성해야 합니다. 리스프가 매크로의 호출을 평가할때, 이는 우선 매크로 본체 정의를 평가하고, 첫번째 평가의 결과를 평가합니다 (이에 비해, 함수의 본체는 값을 반환하기 위해 평가됩니다).</p>
+<p>다음으로 저희가 알아야 할 대부분의 내용을 설명하는 몇 가지 간단한 매크로들이 있습니다:</p>
 <pre><code class="language-lisp">(defmacro setq-literal (place literal)
   `(setq ,place ',literal))
 ;;=&gt; SETQ-LITERAL
@@ -971,44 +971,44 @@ a
 (reverse-cons nil A)
 ;;=&gt; (B)
 </code></pre>
-<p><code>setq-literal</code>는 인수가 평가되지 않는다는 점을 제외하면 마치 <code>setq</code>처럼 동작합니다(SETQ는 이의 두번째 인수를 평가한다는 것을 명심하시기 바랍니다). <code>SETQ-LITERAL</code>의 본체는 (&quot;역따옴표&quot;라 말하는) `로 시작하는 폼을 지녔습니다. 역따옴표는 역따옴표된 폼에서 쉼표가 보인다는 점을 제외하면 (폼으로 둘러싸인 모든 것의 평가를 숨기는)따옴표처럼 행동합니다.</p>
-<p>따라서 위의 <code>(SETQ-LITERAL A B)</code>를 호출함에 있어, 무슨 일이 벌어지는지가 여기 나와 있습니다:</p>
+<p><code>setq-literal</code>는 인수가 평가되지 않는다는 점을 제외하면 마치 <code>setq</code>처럼 동작합니다(SETQ는 이의 두번째 인수를 평가한다는 것을 명심하시기 바랍니다). <code>SETQ-LITERAL</code>의 본체는 (&quot;역따옴표&quot;라 불리는) <code>`</code>로 시작하는 폼을 지녔습니다. 따옴표처럼 역따옴표로 묶인 모든 폼의 평가를 억제하지만, 역따옴표 안에서 쉼표가 나타나는 경우는 예외입니다. 쉼표 뒤에 오는 심볼은 평가됩니다.</p>
+<p>따라서 위의 <code>(SETQ-LITERAL A B)</code>를 호출함에 있어, 무슨 일이 벌어지는지 여기 나와 있습니다:</p>
 <ol>
-<li>PLACE를 심볼 A에 bind한다.</li>
-<li>LITERAL를 심볼 B에 bind한다.</li>
-<li>다음 단계를 거처 `(SETQ ,PLACE ',LITERAL) 본체를 평가한다:
+<li>심볼 <code>A</code>를 <code>PLACE</code>에 바인드한다.</li>
+<li>심볼 <code>B</code>를 <code>LITERAL</code>에 바인드한다.</li>
+<li>다음 단계를 거처 <code>`(SETQ ,PLACE ',LITERAL)</code> 본체를 평가한다:
 <ol>
-<li>심볼 A얻기 위해 PLACE를 평가한다.</li>
-<li>심볼 B얻기 위해 LITERAL를 평가한다.</li>
-<li>폼 (SETQ A 'B)를 반환한다.</li>
+<li><code>PLACE</code>를 평가하여 심볼 <code>A</code>를 얻는다.</li>
+<li><code>LITERAL</code>를 평가하여 심볼 <code>B</code>를 얻는다.</li>
+<li>폼 <code>(SETQ A 'B)</code>를 반환한다.</li>
 </ol>
 </li>
-<li>폼 (SETQ A 'B)를 평가한다.</li>
+<li>폼 <code>(SETQ A 'B)</code>를 평가한다.</li>
 </ol>
-<p>반환된 폼에서 역따옴표나 쉼표는 보이지 않습니다. <code>SETQ-LITERAL</code> 호출에서 <code>A</code>나 <code>B</code>가 평가되지 않지만 서로 다른 이유 때문입니다. <code>A</code>는 <code>SETQ</code>의 첫번째 인자처럼 보이기에 평가되지 않습니다. <code>B</code>는 매크로에 의해 반환된 폼앞에 따옴표가 보이기에 평가되지 않습니다</p>
+<p>반환된 폼에서 역따옴표나 쉼표는 보이지 않습니다. <code>SETQ-LITERAL</code> 호출에서 <code>A</code>나 <code>B</code>가 평가되지 않지만 서로 다른 이유 때문입니다. <code>A</code>는 <code>SETQ</code>의 첫번째 인수이기에 평가되지 않습니다. <code>B</code>는 매크로에 의해 반환된 폼앞에 따옴표(<code>'</code>)가 보이기에 평가되지 않습니다</p>
 <p><code>(REVERSE-CONS NIL A)</code>의 동작은 유사합니다:</p>
 <ol>
-<li>bind REST를 심볼 NIL에 bind한다.</li>
-<li>bind FIRST를 심볼 A에 bind한다.</li>
-<li>다음 단계를 거처, `(CONS ,FIRST ,REST) 본체를 평가한다:
+<li>심볼 <code>NIL</code>을 <code>REST</code>에 바인드한다.</li>
+<li>심볼 <code>A</code>를 <code>FIRST</code>에 바인드한다.</li>
+<li>다음 단계를 거처, <code>`(CONS ,FIRST ,REST)</code> 본체를 평가한다:
 <ol>
-<li>심볼 A를 얻기 위해 FIRST를 평가한다.</li>
-<li>심볼 NIL를 얻기 위해 REST를 평가한다.</li>
-<li>폼 (CONS A NIL)를 반환한다.</li>
+<li><code>FIRST</code>를 평가하여 심볼 <code>A</code>를 얻는다.</li>
+<li><code>REST</code>를 평가하여 심볼 <code>NIL</code>를 얻는다.</li>
+<li>폼 <code>(CONS A NIL)</code>를 반환한다.</li>
 </ol>
 </li>
-<li>폼 (CONS A NIL)을 평가한다.</li>
+<li>폼 <code>(CONS A NIL)</code>을 평가한다.</li>
 </ol>
-<p>CONS가 이의 인자를 평가하며, 매크로 본체는 두 인자에 따옴표를 붙이지 않았기에, <code>reverse-cons</code>의 두 인자는 평가됩니다. <code>A</code>는 심볼 <code>B</code>로 평가되며, <code>NIL</code>은 자기자신으로 평가됩니다.</p>
-<p>여러분이 평가되기전에 매크로 본체가 어떻게 보여지는지 확인하고자 한다면, <code>macroexpand</code> 함수를 이용할 수 있습니다:</p>
+<p><code>CONS</code>는 이의 인수들을 평가하며, 매크로 본체에서 두 인자에 따옴표를 붙이지 않았기에, <code>reverse-cons</code>의 두 인수는 평가됩니다. <code>A</code>는 심볼 <code>B</code>로 평가되며, <code>NIL</code>은 자기자신으로 평가됩니다.</p>
+<p>여러분이 평가되기전에 매크로 본체가 어떤지 확인하고자 한다면, <code>macroexpand</code> 함수를 이용할 수 있습니다:</p>
 <pre><code class="language-lisp">(macroexpand '(setq-literal a b))
 ;;=&gt; (SETQ A 'B)
 
 (macroexpand '(reverse-cons nil a))
 ;;=&gt; (CONS A NIL)
 </code></pre>
-<p><code>macroexpand</code>는 함수이기에 인자를 평가합니다. 때문에 확장시키고자 하는 폼에 따옴표가 있어야 합니다.</p>
-<p>일부러 이번 레슨의 예제를 매우 간단한 걸로 놓았으므로, 여러분은 매우 간단 기본 매커니즘을 이해할 수 있을 것입니다. 일반적으로, 매크로는 함수보다 작성하기 힘듭니다 - 20장[p 188]에서 이유와 복잡한 상황을 다룰수 있는 적절한 기법을 살펴볼 것입니다.</p>
+<p><code>macroexpand</code>는 함수이기에 인자를 평가합니다. 때문에 확장시키고자 하는 폼 앞에 따옴표가 있어야 합니다.</p>
+<p>일부러 이번 레슨의 예제를 매우 간단한 걸로 놓았으므로, 여러분은 매우 간단 기본 매커니즘을 이해할 수 있을 것입니다. 일반적으로, 매크로는 함수보다 작성하기 힘듭니다 - 20장[p 188]에서 그 이유와 그러한 복잡한 상황을 다룰 수 있는 적절한 기법에 대해 살펴보도록 하겠습니다.</p>
 <h2 id="짚고-넘어가기-8"><a class="header" href="#짚고-넘어가기-8">짚고 넘어가기</a></h2>
 <ul>
 <li><code>defmacro</code></li>
