deploy: 9e7135f54cdf9dfeb7a5d66a93754469ff12f830

--- a/ch03/lesson_05.html
+++ b/ch03/lesson_05.html
@@ -213,7 +213,7 @@
 ;;=&gt; T
 </code></pre>
 <p>심볼 이름으로 대문자나 소문자를 사용하는 것은 문제가 되지 않습니다. 내부적으로, 리스프는 심볼 이름에 있는 모든 알파벳 문자들을 보통은 대문자로 바꾸며, 리스프 리더 속에 있는 플레그를 설정하여 이 기본 설정을 제어할 수 있습니다.
-레슨 10 [p 65](또한 31장 [p 247]참조)에서 패키지에 대해 배운다면, 스펠은 같지만 동일하지는 않는 심볼 이름을 만들 수 있습니다. 지금 알아야 할것은 <code>:</code> 로 표시된 심볼은 특별하게 취급한다 라는 것입니다.</p>
+<a href="./lesson_10.html">레슨 10</a> [p 65](또한 31장 [p 247]참조)에서 패키지에 대해 배운다면, 스펠은 같지만 동일하지는 않는 심볼 이름을 만들 수 있습니다. 지금 알아야 할것은 <code>:</code> 로 표시된 심볼은 특별하게 취급한다 라는 것입니다.</p>
 <h2 id="심볼로-값에-이름-붙일-수-있다"><a class="header" href="#심볼로-값에-이름-붙일-수-있다">심볼로 값에 이름 붙일 수 있다.</a></h2>
 <p>심볼의 자기 자신을 표현하는 능력 역시 유용하지만, 더욱 일반적으로 사용되는 곳은 값의 이름을 붙일 때입니다. 이는 다른 프로그래밍 언어에서 변수와 함수 이름의 역활을 맡습니다. 리스프 심볼은 값의 이름이나, 함수의 이름을 지을 때 사용됩니다.</p>
 <p>리스프에서 특이한 점 중 하나는 심볼은 함수랑 변수의 값을 동시에 지닐 수 있다 라는 점 입니다:</p>
