--- a/ch03/lesson_07.html
+++ b/ch03/lesson_07.html
@@ -191,7 +191,7 @@
           ((&gt; the-number the-secret) 'too-high))))
 ;;=&gt; SECRET-NUMBER
 </code></pre>
-<p>레슨 3에서 <code>let</code>, <code>cond</code>, <code>'</code>(quote의 별칭)를 다루었습니다. 숫자 비교 함수들은 그 의미가 명확합니다.</p>
+<p><a href="./lesson_03.html">레슨 3</a>에서 <code>let</code>, <code>cond</code>, <code>'</code>(quote의 별칭)를 다루었습니다. 숫자 비교 함수들은 그 의미가 명확합니다.</p>
 <p><code>defun</code> 폼은 3개의 인자를 가집니다:</p>
 <ol>
 <li>함수의 이름: <code>secret-number</code></li>
