--- a/ch03/lesson_09.html
+++ b/ch03/lesson_09.html
@@ -197,12 +197,12 @@
 ;;=&gt; :THAT
 </code></pre>
 <p>폼의 평가에 의해 생성된 여러 라인이으로 얼마나 많은 값이 반환되었는지 보았습니다. 위의 예제에서 3개의 <code>values</code> 폼에서 각각 0개, 1개, 2개의 값을 생성하였습니다.</p>
-<p><code>values</code>는 함수이며, 따라서 인자를 평가합니다.</p>
+<p><code>values</code>는 함수이며, 따라서 이의 인수를 평가합니다.</p>
 <h2 id="몇몇-특수한-폼은-여러개의-값을-받을-수-있다"><a class="header" href="#몇몇-특수한-폼은-여러개의-값을-받을-수-있다">몇몇 특수한 폼은 여러개의 값을 받을 수 있다.</a></h2>
-<p>여러개의 값들을 다룰려면 무엇을 해야할까요? 가장 기본적인 동작으로는 :</p>
+<p>여러개의 값들을 다루고자 한다면 어떻게 해야 할까요? 가장 기본적인 것들로는 :</p>
 <ol>
-<li>각 값들을 개별 심볼로 바인드한다</li>
-<li>혹은 값들을 리스트로 모은다.</li>
+<li>각 값들을 개별 심볼로 바인드한다.</li>
+<li>혹은, 값들을 하나의 리스트로 모은다.</li>
 </ol>
 <p>각 값들을 개별 심볼로 바인드하기 위해 <code>multiple-value-bind</code>를 이용합니다:</p>
 <pre><code class="language-lisp">(multiple-value-bind (a b c) (values 2 3 5)
@@ -219,8 +219,8 @@
      (list w x y z))
 ;;=&gt; (:LEFT :RIGHT NIL NIL)
 </code></pre>
-<h2 id="몇몇-폼은-여러값multiple-values그대로-넘긴다"><a class="header" href="#몇몇-폼은-여러값multiple-values그대로-넘긴다">몇몇 폼은 여러값(multiple values)그대로 넘긴다.</a></h2>
-<p>몇몇 폼은 새로운 값을 생성하는 것 대신에, 마지막 값을 본체로 넘김니다. 예제는 <code>let</code>, <code>cond</code>, <code>defun</code>, <code>lambda</code>의 본체를 포함합니다.</p>
+<h2 id="몇몇-폼은-여러개의-값들을-그대로-넘긴다"><a class="header" href="#몇몇-폼은-여러개의-값들을-그대로-넘긴다">몇몇 폼은 여러개의 값들을 그대로 넘긴다.</a></h2>
+<p>몇몇 폼은 새로운 값을 생성하는 대신에, 본체의 마지막 값을 넘김니다. 예제는 <code>let</code>, <code>cond</code>, <code>defun</code>, <code>lambda</code>의 본체를 포함합니다.</p>
 <pre><code class="language-lisp">(let ((a 1)
       (b 2))
   (values a b))
@@ -244,8 +244,8 @@
 ;;=&gt; 7
 ;;=&gt; 8
 </code></pre>
-<p>함수와 <code>lambda</code> 본체의 경우엔, &quot;암시적 <code>PROGN</code>&quot;라 불리는 무언것으로부터 다수의 값이 반환되었습니다. 이는, 본체가 다수의 폼을 포함할 수 있으며, 최종적으로 마지막 폼의 값이 반환됩니다.</p>
-<p>위와같은 행동을 원할때 <code>progn</code> 스페실 폼을 이용할 수 있습니다. <code>(PROGN form1 form2 ... formN)</code> 은 순서대로 <code>form1</code>부터 <code>formN</code>까지 평가하고, 최종적으로 <code>formN</code>의 값을 반환합니다.</p>
+<p>함수와 <code>lambda</code> 본체의 경우엔, &quot;암시적 <code>PROGN</code>&quot;라 불리는 무언가로부터 다중 값이 반환되었습니다. 본체는 다수의 폼을 포함할 수 있으며, 최종적으로 마지막 폼의 값이 반환됩니다.</p>
+<p><code>progn</code> 스페실 폼을 이용하여 위와 같은 행동을 할 수 도 있습니다. <code>(PROGN form1 form2 ... formN)</code> 은 순서대로 <code>form1</code>부터 <code>formN</code>까지 평가하고, 최종적으로 <code>formN</code>의 값을 반환합니다.</p>
 <h2 id="짚고-넘어가기"><a class="header" href="#짚고-넘어가기">짚고 넘어가기</a></h2>
 <ul>
 <li><code>values</code></li>
