--- a/ch03/lesson_11.html
+++ b/ch03/lesson_11.html
@@ -183,13 +183,13 @@
 <li><a href="https://dept-info.labri.fr/~strandh/Teaching/MTP/Common/David-Lamkins/chapter03-11.html">원문</a></li>
 </ul>
 <h2 id="read는-리스프-데이터를-받는다"><a class="header" href="#read는-리스프-데이터를-받는다">READ는 리스프 데이터를 받는다.</a></h2>
-<p>레슨 10에서 봤던것처럼, <code>read</code>는 문자를 리스프 데이터로 변환시킵니다. 이제까지, 우리들은 리스프 데이터 여러 출력 값들을 보았습니다:</p>
+<p><a href="./lesson_10.html">레슨 10</a>에서 봤던것처럼, <code>read</code>는 문자를 리스프 데이터로 변환시킵니다. 이제까지, 우리들은 리스프 데이터 여러 출력 값들을 살펴 보았습니다:</p>
 <ul>
 <li>심볼과 숫자</li>
 <li>문자, 문자열, 리스트, 배열, 백터, 구조체</li>
 <li>해쉬태이블</li>
 </ul>
-<p>리스프 리더는 문자의 분류법(classifications)를 따라 일을 수행합니다. 표준 분류법은 아래에 나와있습니다. 레슨 12에서 보게될 것처럼, 여러분은 필요에 따라 이러한 분류법을 바꿀 수도 있습니다.</p>
+<p>리스프 리더(reader)는 문자 분류법(classifications)를 따라 이와 같은 일을 수행합니다. 표준 분류법은 아래에 나와있습니다. <a href="./lesson_12.html">레슨 12</a>에서 보게될 것처럼, 여러분은 필요에 따라 이러한 분류법을 바꿀 수도 있습니다.</p>
 <pre><code class="language-txt">표준 구성 문자(Standard Constituent Characters)
 -------------------------------
 a b c d e f g h i j k l m n o p q r s t u v w x y z
@@ -201,7 +201,7 @@ A B C D E F G H I J K L M N O P Q R S T U V W X Y Z
 
 표준 종료 매크로 문자(Standard Terminating Macro Characters)
 -------------------------------------
-&quot; ’ ( ) , ; ‘
+&quot; ' ( ) , ; ‘
 
 
 표준 비-종료 매크로 문자(Standard Non-Terminating Macro Characters)
@@ -209,12 +209,12 @@ A B C D E F G H I J K L M N O P Q R S T U V W X Y Z
 #
 
 
-표준 단일 예외 문자(Standard Single Escape Characters)
+표준 단일 이스케이프 문자(Standard Single Escape Characters)
 ---------------------------------
 \
 
 
-표준 다수 예외 문자(Standard Multiple Escape Characters)
+표준 다수 이스케이프 문자(Standard Multiple Escape Characters)
 -----------------------------------
 |
 
@@ -223,57 +223,64 @@ A B C D E F G H I J K L M N O P Q R S T U V W X Y Z
 ------------------------------
 &lt;tab&gt; &lt;space&gt; &lt;page&gt; &lt;newline&gt; &lt;return&gt; &lt;linefeed&gt;
 </code></pre>
-<p><code>READ</code>가 구성문자(constituent character)로 시작한다면, 이는 심볼이나 숫자를 축적합니다. <code>READ</code>가 종료 매크로 문자(terminating macro character)나 공백 문자(whitespace character)를 만나면, 이는 모아진 구성문자를 우선 숫자로, 그 다음 symbol로 이해interpret하려 시도합니다. 수치화 해석이 가능하다면, <code>READ</code>는 숫자를 반환합니다. 그렇지 않으면, <code>READ</code>는 영문자를 standard case(보통은 대문자)로 바꾸어, 심볼로써 이름을 intern하여, 심볼을 반환합니다.</p>
-<p>예외문자(Escape characters)는 특별한 역활을 수행합니다. 하나의 예외문자는 다음에 나오는 문자를 마치 constituent character처럼 다루도록 합니다. 보통 공백이나 종료매크로문자로 취급되는 문자는 심볼의 일부가 될 수 있습니다. READ가 escape character를 만나면, 숫자들로만 된것이 escape될지라도, constituents 결과를 숫자로 interpret 하려 하지 않을 것입니다</p>
-<p><code>READ</code>시 매크로 문자(macro character)로 시작한다면, 문자는 다음 경우를 판별할 것입니다.</p>
+<p><code>READ</code>가 구성문자(constituent character)로 시작된다면, 이는 심볼이나 숫자를 축적하기 시작합니다. <code>READ</code>가 종료 매크로 문자(terminating macro character)나 공백 문자(whitespace character)를 만나면, 이는 모아진 구성문자를 우선 숫자로, 그 다음 심볼로 해석하기 시작합니다. 숫자로 해석이 가능하다면 <code>READ</code>는 숫자를 반환합니다. 그렇지 않으면, <code>READ</code>는 영문자를 표준문자(standard case (보통은 대문자))로 바꾸어, 심볼로써 이름을 인턴(intern)하여 심볼을 반환합니다.</p>
+<p>이스케이프 문자(Escape characters)는 특별한 역활을 수행합니다. 하나의 이스케이프 문자는 다음에 나오는 문자를 마치 구성문자(constituent character)처럼 다루도록 합니다. 보통 공백이나 종료 매크로 문자로 취급되는 문자는 심볼의 일부가 될 수 있습니다. 이스케이프된 것이 숫자일 지라도, <code>READ</code>가 이스케이프 문자를 만나면 결과를 숫자로 해석하려 하지 않을 것입니다</p>
+<p><code>READ</code>시 매크로 문자(macro character)로 시작한다면, 아래의 문자들이 다음 단계를 결정하게 됩니다:</p>
 <div class="table-wrapper"><table><thead><tr><th>문자</th><th>설명</th></tr></thead><tbody>
 <tr><td>&quot;</td><td>문자열을 읽는다.</td></tr>
-<tr><td>’</td><td>폼을 읽는다.</td></tr>
+<tr><td>'</td><td>폼을 읽는다.</td></tr>
 <tr><td>(</td><td>리스트를 읽는다.</td></tr>
 <tr><td>;</td><td>새로운 라인을 만나기 전까지 모든 것을 무시한다.</td></tr>
 <tr><td>#</td><td>다음 나오는 문자에 기반하여 무엇인지 결정한다.</td></tr>
 </tbody></table>
 </div>
-<p>마지막으로, 몇몇 리스프 데이터는 읽을 수 없습니다. 예를들어, 해쉬테이블이 출력되어 보여지는 것은 <code>#&lt;HASH-TABLE&gt;</code>와 같이 보여집니다. <code>#&lt;</code> 문자로 시작하는 어떠한 것을 읽으려할때 READ는 에러를 낼 것입니다.</p>
-<h2 id="print-writes-lisp-data-for-you-and-for-read"><a class="header" href="#print-writes-lisp-data-for-you-and-for-read">PRINT writes Lisp data for you and for READ</a></h2>
-<p><code>print</code> 함수는 리스프 오브젝트를, READ가 이를 재구성해야만 하는, 문자열(sequence of characters)로 바꿉니다:</p>
-<pre><code class="language-lisp">(print ’abc)
-=  \newline ABC \space
+<p>마지막으로, 몇몇 리스프 데이터는 읽을 수 없습니다. 예를들어, 해쉬테이블의 출력결과는 <code>#&lt;HASH-TABLE&gt;</code>와 같습니다. <code>#&lt;</code> 문자로 시작하는 어떠한 것을 읽으려할때 <code>READ</code>는 에러를 뱉을 것입니다.</p>
+<h2 id="print는-여러분을-그리고-read를-위한-리스프-데이터를-작성한다"><a class="header" href="#print는-여러분을-그리고-read를-위한-리스프-데이터를-작성한다">PRINT는 여러분을 그리고 READ를 위한 리스프 데이터를 작성한다.</a></h2>
+<p><code>print</code> 함수는 리스프 오브젝트를 문자 시퀀스(sequence of characters)로 바꿉니다. 이 문자 시퀀스는 <code>READ</code>에서 재구성하는 데 필요로 하는 것입니다:</p>
+<pre><code class="language-lisp">(print 'abc)
+;;&gt;&gt; ⏎
+;;&gt;&gt; ABC⌴
 ;;=&gt; ABC
 
 (print (list 1 2 3))
-=  \newline (1 2 3) \space
+;;&gt;&gt; ⏎
+;;&gt;&gt; (1 2 3)⌴
 ;;=&gt; (1 2 3)
 
 (print &quot;A String&quot;)
-=  \newline &quot;A string&quot; \space
+;;&gt;&gt; ⏎
+;;&gt;&gt; &quot;A string&quot;⌴
 ;;=&gt; &quot;A string&quot;
 
 (print 387.9532)
-=  \newline 387.9532 \space
+;;&gt;&gt; ⏎
+;;&gt;&gt; 387.9532⌴
 ;;=&gt; 387.9532
 
 (print (make-hash-table))
-=  \newline #&lt;HASH-TABLE&gt; \space
+;;&gt;&gt; ⏎
+;;&gt;&gt; #&lt;HASH-TABLE&gt;⌴
 ;;=&gt; #&lt;HASH-TABLE&gt;
 </code></pre>
-<p><code>PRINT</code>는 개행문자(<code>\newline</code>)로 시작하고 띄어쓰기(<code>\space</code>)으로 끝나는 결과물을 출력합니다. 개행과 띄어쓰기 모두 공백(whitespace)으로 취급되므로, (escape가 아닌)리스프 오브젝트가 출력된 표현의 일부가 될수 없기에, 이는 PRINT 결과물이 다른 결과물과는 다르다는 것을 보증합니다.</p>
-<p><code>PRINT</code>의 다른 변종들은 다양한 쓰임세를 지녔습니다. <code>PRIN1</code>은 <code>PRINT</code>처럼 행동하지만, whitespace로 감싸지 않습니다. 예를들어 연이은 조각들로부터 이름을 만들고자 할때, 이는 유용할 것입니다. PRINC는 PRIN1처럼 행동하지만, 보여는것 보단 READ를 위한 결과물을 생성합니다; 예를들어, PRINC는 문자열을 둘러싸는 쌍따옴표(quotes)를 생략하며, escape character를 출력하지 않습니다.</p>
-<pre><code class="language-lisp">(print ’a\ bc)
-;;&gt;&gt;  \newline  |A BC| \space
+<p><code>PRINT</code>는 개행(⏎)으로 시작하고 띄어쓰기(⌴)으로 끝나는 결과물을 출력합니다. 이는 <code>PRINT</code> 출력이 다른 출력들과 구별되도록 만들어 줍니다. 개행과 띄어쓰기 모두 공백(whitespace)으로 취급되며, 이는 (이스케이프되지 않는 한) 리스프 오브젝트를 출력하는데 하는데 포함될 수 없습니다.</p>
+<p><code>PRINT</code>와 비슷한 다양한 쓰임세를 지닌 다른 변종들이 있습니다. <code>PRIN1</code>은 <code>PRINT</code>와 비슷하게 행동하지만, 공백으론 감싸지 않습니다. 예를들어 여러 조각들로 이름을 만들고자 할때 유용하게 쓰일 것입니다. <code>PRINC</code>는 <code>PRIN1</code>처럼 행동하지만 <code>READ</code>를 위하기 보단, 유저에게 보여지는것을 위한 결과물을 생성합니다; 예를들어, <code>PRINC</code>는 문자열을 둘러싸는 쌍따옴표를 생략하며, 이스케이프 문자 역시 출력하지 않습니다.</p>
+<pre><code class="language-lisp">(print 'a\ bc)
+;;&gt;&gt; ⏎
+;;&gt;&gt; |A BC|⌴
 ;;=&gt; |A BC|
 
-(prin1 ’a\ bc)
+(prin1 'a\ bc)
 ;;&gt;&gt; |A BC|
 ;;=&gt; |A BC|
 
-(princ ’|A BC|)
-;;&gt;&gt; \newline  A BC \space
+(princ '|A BC|)
+;;&gt;&gt; ⏎
+;;&gt;&gt; A BC⌴
 ;;=&gt; |A BC|
 </code></pre>
 <h2 id="open과-close는-파일을-다룰-수-있게-한다"><a class="header" href="#open과-close는-파일을-다룰-수-있게-한다">OPEN과 CLOSE는 파일을 다룰 수 있게 한다.</a></h2>
-<p>보통, <code>READ</code>는 키보드를 읽고 <code>PRINT</code>는 화면에 출력합니다. 이러한 함수 모두 옵셔널(optional) 인자를 취합니다; 인자는 <code>READ</code>를 위한 입력 스트림과 <code>PRINT</code>를 위한 출력 스트림을 지정합니다. 스트림(stream)은 무엇일까요? 스트림은 데이터의 근원(source)이자 밑바닥(sink)이며, 보통 (그치만 절대적이지는 않은) 문자(characters)입니다. 이제부터, 저희는 tex file이 어떻게 문자 stream의 source나 sink가 될 수 있는지를 살펴볼 것입니다. 19장 [p 183]에서 저희는 몇몇 다른 가능성들을 살펴볼 것입니다.</p>
-<p>여러분은, 파일 이름을 인자로 취하고 스트림의 방향(입력과 출력)을 결정하는 키워드 인자를 취하는, <code>OPEN</code> 함수를 이용하여 스트림을 파일로 붙일 수 있습니다. 스트림에 관한 작업을 종료하고 관련된 파일을 닫기 위해선, <code>CLOSE</code> 함수를 사용합니다.</p>
+<p>보통, <code>READ</code>는 키보드를 읽고 <code>PRINT</code>는 화면에 출력합니다. 이러한 함수 모두 옵셔널(optional) 인수를 취합니다; 인수로 <code>READ</code>를 위한 입력 스트림과 <code>PRINT</code>를 위한 출력 스트림을 지정합니다. 스트림(stream)은 무엇일까요? 스트림은 데이터의 소스(source)이자 밑바닥(sink)이며, 보통은 (그치만 절대적이지는 않은) 문자들(characters)입니다. 이제부터, 저희는 텍스트 파일이 어떻게 문자 스트림의 소스가 될 수 있는지를 살펴볼 것입니다. 19장 [p 183]에서 저희는 몇몇 다른 가능성들을 살펴볼 것입니다.</p>
+<p>파일 이름을 인수로 취하고 스트림의 방향(입력과 출력)을 결정하는 키워드 인수를 취하는, <code>OPEN</code> 함수를 이용하여 스트림을 파일로 연결 시킬 수 있습니다. 스트림에 대한 작업을 끝내고 연결된 파일을 닫기 위해선 <code>CLOSE</code> 함수를 사용합니다.</p>
 <pre><code class="language-lisp">(setq out-stream (open &quot;my-temp-file&quot; :direction :output))
 ;;=&gt; #&lt;OUTPUT-STREAM &quot;my-temp-file&quot;&gt;
 
@@ -292,30 +299,30 @@ A B C D E F G H I J K L M N O P Q R S T U V W X Y Z
 (close in-stream)
 ;;=&gt; T
 </code></pre>
-<p>이 예제에서, 저희는 <code>my-temp-file</code>에 대한 출력 스트림을 만들고, 심볼 <code>ABC</code>를 그 스트림에 출력하였습니다. 인자는 평상시처럼 반환하지만 출력을 하지 않는 다는 것을 주목하시기 바랍니다 - 대신, 출력된 결과는 파일로 갑니다.</p>
-<p>다음으로, 출력 스트림을 닫고 동일한 파일에 입력 스트림을 열었습니다. 그런 다음 저희가 파일에 출력한 심볼을 읽어온 다음, 입력 스트림을 닫음으로써 끝을 맺습니다.</p>
-<h2 id="variations-on-a-print-theme"><a class="header" href="#variations-on-a-print-theme">Variations on a PRINT theme</a></h2>
-<p>리스프는 또한, 이러한 옵션을 제어하는 키워드 인자를 이용하여, 여러분에게 출력에 대해 더욱 세부적인 것에 관한 제어권을 주는 <code>WRITE</code> 함수를 제공합니다:</p>
-<div class="table-wrapper"><table><thead><tr><th>Keyword Argument</th><th>Default Value</th><th>Action</th></tr></thead><tbody>
-<tr><td>:stream</td><td><code>t</code></td><td>set output stream</td></tr>
-<tr><td>:escape</td><td><code>*print-escape*</code></td><td>include escape characters</td></tr>
-<tr><td>:radix</td><td><code>*print-radix*</code></td><td>include radix (base) prefix</td></tr>
-<tr><td>:base</td><td><code>*print-base*</code></td><td>set number base (rationals)</td></tr>
-<tr><td>:circle</td><td><code>*print-circle*</code></td><td>print circular structures</td></tr>
-<tr><td>:pretty</td><td><code>*print-pretty*</code></td><td>add whitespace for readability</td></tr>
-<tr><td>:level</td><td><code>*print-level*</code></td><td>limit nesting depth</td></tr>
-<tr><td>:length</td><td><code>*print-length*</code></td><td>limit items per nesting level</td></tr>
-<tr><td>:case</td><td><code>*print-case*</code></td><td>:upper, :lower, or :mixed</td></tr>
-<tr><td>:gensym</td><td><code>*print-gensym*</code></td><td>prefix uninterned symbols</td></tr>
-<tr><td>:array</td><td><code>*print-array*</code></td><td>print arrays readably</td></tr>
-<tr><td>:readably</td><td><code>*print-readably*</code></td><td>force printing to be readable</td></tr>
-<tr><td>:right-margin</td><td><code>*print-right-margin*</code></td><td>controls pretty-printing</td></tr>
-<tr><td>:miser-width</td><td><code>*print-miser-width*</code></td><td>&quot;</td></tr>
-<tr><td>:lines</td><td><code>*print-lines*</code></td><td>&quot;</td></tr>
-<tr><td>:pprint-dispatch</td><td><code>*print-pprint-dispatch*</code></td><td>&quot;</td></tr>
+<p>이 예제에서, 저희는 <code>my-temp-file</code>에 대한 출력 스트림을 만들었으며, 심볼 <code>ABC</code>를 그 스트림에 출력하였습니다. 여느때와 같이 인자를 반환하지만, 출력은 하지않았다는  점을 주목해주시길 바랍니다 - 출력된 결과는 파일로 갔습니다.</p>
+<p>다음으로, 출력 스트림을 닫고 동일한 파일로 입력 스트림을 열었습니다. 그런 다음 저희가 파일에 출력한 심볼을 읽어온 다음, 입력 스트림을 닫음으로써 끝을 맺었습니다.</p>
+<h2 id="print의-여러가지-변종-태마"><a class="header" href="#print의-여러가지-변종-태마">PRINT의 여러가지 변종 태마</a></h2>
+<p>리스프는 또한 이러한 옵션을 제어하는 키워드 인자를 사용하여, 출력을 더욱 세부적으로 제어할 수 있는 <code>WRITE</code>라는 함수를 제공합니다:</p>
+<div class="table-wrapper"><table><thead><tr><th>키워드 인자</th><th>기본 값</th><th>행동</th></tr></thead><tbody>
+<tr><td>:stream</td><td><code>t</code></td><td>출력 스트림 설정</td></tr>
+<tr><td>:escape</td><td><code>*print-escape*</code></td><td>이스케이프 문자 포함</td></tr>
+<tr><td>:radix</td><td><code>*print-radix*</code></td><td>진법(radix (base)) 프리픽스</td></tr>
+<tr><td>:base</td><td><code>*print-base*</code></td><td>숫자가 몇 진법을 사용할지 설정</td></tr>
+<tr><td>:circle</td><td><code>*print-circle*</code></td><td>순환(circular) 구조물 출력</td></tr>
+<tr><td>:pretty</td><td><code>*print-pretty*</code></td><td>가독성을 위한 공백 추가</td></tr>
+<tr><td>:level</td><td><code>*print-level*</code></td><td>중첩 단계 한계</td></tr>
+<tr><td>:length</td><td><code>*print-length*</code></td><td>중첩 단계당 아이템의 한계</td></tr>
+<tr><td>:case</td><td><code>*print-case*</code></td><td>:upper, :lower, 혹은 :mixed</td></tr>
+<tr><td>:gensym</td><td><code>*print-gensym*</code></td><td>uninterned 심볼의 접두사</td></tr>
+<tr><td>:array</td><td><code>*print-array*</code></td><td>가독성 있게 배열 출력</td></tr>
+<tr><td>:readably</td><td><code>*print-readably*</code></td><td>강제로 가독성있게</td></tr>
+<tr><td>:right-margin</td><td><code>*print-right-margin*</code></td><td>가독성있게 출력하는 옵션</td></tr>
+<tr><td>:miser-width</td><td><code>*print-miser-width*</code></td><td>''</td></tr>
+<tr><td>:lines</td><td><code>*print-lines*</code></td><td>''</td></tr>
+<tr><td>:pprint-dispatch</td><td><code>*print-pprint-dispatch*</code></td><td>''</td></tr>
 </tbody></table>
 </div>
-<p>우연하게도, 위에 키워드 인자의 기본값으로 나온 변수들은 또한 <code>PRINT</code>의 연산을 제어합니다. 여러분은, <code>PRIN1</code>을 감싸는 <code>LET</code> 폼에서 이러한 변수들을 바인딩 함으로써, non-default 키워드 인자로 <code>WRITE</code>의 효과를 얻을 수 있습니다:</p>
+<p>우연하게도, 위에 키워드 인자의 기본값으로 나온 변수들은 또한 <code>PRINT</code>의 연산을 제어합니다. 여러분은, 키워드 인자를 쓰지 않고 <code>LET</code> 폼에서 이러한 변수에 바인딩 하고 <code>PRIN1</code>를 감싸면 <code>WRITE</code>과 동일한 효과를 얻을 수 있습니다:</p>
 <pre><code class="language-lisp">(write foo
        :pretty t
        :right-margin 60
@@ -327,28 +334,29 @@ A B C D E F G H I J K L M N O P Q R S T U V W X Y Z
       (*print-case* :downcase))
   (prin1 foo))
 </code></pre>
-<p><code>PRINT</code>가 추가하는 앞에 newline이 있고 뒤에 빈칸(blank)이 오는걸 원치 않기에, <code>print</code>가 아닌 <code>prin1</code>를 사용하였습니다.</p>
-<p>여러분의 프로그램이 <code>*PRINT-...*</code> 변수를 바꾸지만, 프로그램의 어느 지점에서 기본 값(default value)을 쓰고자 한다면, <code>with-standard-io-syntax</code> 폼으로 프로그램의 일부를 감쌀 수 있습니다:</p>
-<pre><code class="language-lisp">;;프로그램의 printer control을 정의한다.
+<p><code>print</code>가 아닌 <code>prin1</code>를 사용했는데, <code>PRINT</code>는 앞에 개행(⏎) 있고 뒤에 빈칸(⌴)이 오기 때문입니다.</p>
+<p><code>*PRINT-...*</code>류의 변수를 바꿨다가, 프로그램의 어느 지점에서 다시 기본 값(default value)을 쓰고자 한다면, <code>with-standard-io-syntax</code> 폼으로 감쌀 수 있습니다:</p>
+<pre><code class="language-lisp">;; 프로그램의 출력 제어를 정의한다.
 (setq *print-circle* t)
 (setq *print-array* nil)
 (setq *print-escape* nil)
 ...
 
-;;위에서 설정한 걸 출력한다.
+;; 위에서 설정한 걸 출력한다.
 (print ...)
 ...
 
-;;default printer control 설정으로 되돌린다.
+;; 원래의 출력 제어 설정으로 되돌린다.
 (with-standard-io-syntax
    ...
-   ; standard setting으로 출력한다음,
-   ; 위에서 설정한 이러한 것들을 덮어쓴다.
+   ;; 기본 설정으로 출력한다음,
+   ;; 위에서 설정한 것들을 덮어버린다.
    (print ...)
    ...)
-;; WITH-STANDARD-IO-SYNTAX form 밖에선,
-;; 예제 상단에 있는 SETQ 폼에 의해
-;; 구축establish된 print 설정을 또 다시 해야합니다.
+
+;; WITH-STANDARD-IO-SYNTAX 폼 밖에선,
+;; 예제 상단에 있는 SETQ 폼에 의해 설정된
+;; print의 설정을 또 다시 해야한다.
 </code></pre>
 <h2 id="짚고-넘어가기"><a class="header" href="#짚고-넘어가기">짚고 넘어가기</a></h2>
 <ul>
