--- a/ch03/lesson_12.html
+++ b/ch03/lesson_12.html
@@ -183,11 +183,11 @@
 <li><a href="https://dept-info.labri.fr/~strandh/Teaching/MTP/Common/David-Lamkins/chapter03-12.html">원문</a></li>
 </ul>
 <h2 id="리더reader는-문자를-데이터로-만든다"><a class="header" href="#리더reader는-문자를-데이터로-만든다">리더(reader)는 문자를 데이터로 만든다</a></h2>
-<p>레슨 11에서 리스프 리더가 constituent characters를 심볼과 숫자로 모으gather고 macro characters가 lists, strings, quoted forms, comments를 다루기 위해 reader를 제어하는 것을 보았습니다. 이 모든 경우에, reader는 문자(characters)를 데이터로 바꿉니다 (좀 더 분명히 하자면, comment는 &quot;데이터가 아닙니다&quot;.)</p>
-<h2 id="standard-reader-macros-handle-built-in-data-types"><a class="header" href="#standard-reader-macros-handle-built-in-data-types">Standard reader macros handle built-in data types</a></h2>
-<p>지금까지, 우리는 리스프의 기본 문법만을 살펴보았습니다. 이는 reader에 의해 구현되며, readtable에 의해 제어됩니다. reader는 readtable에 저장되어있는 정보를 따라 characters를 처리합니다.</p>
-<h2 id="user-programs-can-define-reader-macros"><a class="header" href="#user-programs-can-define-reader-macros">User programs can define reader macros</a></h2>
-<p>리스프는 리드테이블(readtable)을 <code>*readtable*</code>변수를 통해 나타내며, 리스프는 리드테이블에 있는 항목을 다룰 수 있는 함수를 제공합니다. 여러분은 이를 이용하여 리스프 리더의 행동을 바꿀 수 있습니다. 다음 예제에서, 우리는 문법을 바꿀 것이며 [와 ]를 이용하여 quoted(즉, 평가되지 않는) 리스트를 작성할 수 있을 것입니다.</p>
+<p><a href="./lesson_11.html">레슨 11</a>에서 리스프 리더(reader)가 구성문자들을 심볼과 숫자로 모았으며, 매크로 문자들로 리더를 제어하여 리스트, 문자열, <code>quote</code>된 폼, 주석을 처리하는 것을 보았습니다. 이 모든 경우에서와 같이, 리더(reader)는 문자들을 데이터로 바꿉니다 (좀 더 정확히 하자면, 주석은 &quot;데이터가 아닙니다&quot;.)</p>
+<h2 id="표준-리더-매크로는-내장-데이터-타입을-다룰-수-있다"><a class="header" href="#표준-리더-매크로는-내장-데이터-타입을-다룰-수-있다">표준 리더 매크로는 내장 데이터 타입을 다룰 수 있다.</a></h2>
+<p>지금까지, 우리는 리스프의 기본 문법만을 살펴보았습니다. 이는 리더에 의해 구현되며, 리드테이블(readtable)에 의해 제어됩니다. 리더는 리드테이블에 저장되어있는 정보를 따라 문자들을 처리합니다.</p>
+<h2 id="사용자는-리더-매크로를-정의할-수-있다"><a class="header" href="#사용자는-리더-매크로를-정의할-수-있다">사용자는 리더 매크로를 정의할 수 있다</a></h2>
+<p><code>*readtable*</code>변수를 통해 리드테이블(readtable)에 접근할 수 있으며, 리드테이블에 있는 항목을 조작할 수 있는 함수들을 리스프는 제공합니다. 여러분은 이를 이용하여 리스프 리더의 행동을 바꿀 수 있습니다. 다음 예제에선, 문법을 바꾸어 <code>[</code>와 <code>]</code>를 이용하여 평가되지 않는 리스트를 작성하였습니다:</p>
 <pre><code class="language-lisp">;;이는 틀렸습니다:
 (1 2 3 4 5 6)
 ;;&gt;| Error: 1 is not a function
@@ -197,10 +197,8 @@
 ;;=&gt; (1 2 3 4 5 6)
 
 ;;새로운 문법을 정의하여
-;; '(1 2 3 4 5 6)
-;;대신에
-;; [1 2 3 4 5 6]
-;;이처럼 작성할 수 있게 합시다.
+;; '(1 2 3 4 5 6)   ; 대신에
+;;  [1 2 3 4 5 6]   ; 이처럼 작성할 수 있게 합시다.
 (defun open-bracket-macro-character (stream char)
   `',(read-delimited-list #\] stream t))
 ;;=&gt; OPEN-BRACKET-MACRO-CHARACTER
@@ -215,18 +213,17 @@
 [1 2 3 4 5 6]
 ;;=&gt; (1 2 3 4 5 6)
 </code></pre>
-<p>처음 저희는 <code>(1 2 3 4 5 6)</code>을 평가하려 했습니다: <code>1</code>은 함수가 아니기에, 이는 옳지않습니다.
-저희가 실제로 해야하는 것은 리스트를 <code>quote</code> 하는 것입니다. 그러나 이러한 작업을 매번 해야한다면, 더욱 편리한 문법을 원하게 될 것입니다. 특히, <code>'(...)</code>과 같은 행동을 하는 <code>[...]</code>이 있었으며 좋겠습니다.</p>
-<p>이를 수행하기 위해, 이의 인자를 평가하지 않는 specialized list reader macro 함수를 정의해야 합니다. 저희는 reader가 [ 문자를 만나면 함수가 호출되도록 할 것입니다; 함수는 ] 문자를 만나면 리스트를 반환할 것입니다. 모든 reader macro function은 두개의 인자에 의해 호출됩니다: input stream과 macro를 작동시키는 문자.</p>
-<p>리스프가 한정된delimited 리스트를 읽도록 설계된 함수를 지녔기에, 저희 reader 매크로는 매우 단순합니다. READ-DELIMITED-LIST는 하나의 인자를 기다립니다 - 읽고있는 리스트를 종료시키는 문자. 다른 두개의 인자는 optional입니다 - input stream과 (reader macro 함수에서 사용될땐 보통 T로 설정되는)flag. READ-DELIMITED-LIST는 terminating character를 만나기 전까지 input stream에서 objects를 읽은다음, 모든 objects를 list로 반환합니다. 자체적으로, 이는 평가를 막는것suppressing을 제외한 저희가 필요한 모든것을 수행합니다.</p>
-<p>레슨 3에서 봤던것 처럼, <code>QUOTE</code> (혹은  <code>'</code>)는 평가를 막습니다. 그러나 저희는 <code>'(READ-DELIMITED-LIST ...)</code>를 사용할 수 없습니다; 이는, 저희가 <code>quote</code> 하고자 하는 폼을 얻기 위해 저희가 평가하고자 하는, 폼의 평가를 막습니다... 대신, <code>quote</code>된 폼에 대해 선택적인 평가를 요구하는 <code>`</code>(레슨 8 참조)를 이용하였습니다.</p>
-<p>저희 <code>OPEN-BRACKET-MACRO-CHARACTER</code>의 정의는 폼을 평가하고 <code>quote</code>된 결과를 반환하기 위해
-<code>`',form</code>
-을 이용하였습니다.</p>
+<p>처음 저희는 <code>(1 2 3 4 5 6)</code>을 평가해보려 시도했습니다: <code>1</code>은 함수가 아니기에, 이는 옳지 않습니다. 이제 저희가 해야만하는 것은 리스트를 <code>quote</code> 하는 것입니다. 그러나 이러한 작업을 매번 해야한다면, 더욱 편리한 문법을 원하게 될 것입니다. 좀 더 구체적으로, <code>[...]</code>이 <code>'(...)</code> 처럼 동작했으면 좋겠습니다.</p>
+<p>이를 수행하기 위해, 인수를 평가하지 않는 특수 리스트 리더 매크로 함수를 정의해야 합니다. 리더가 <code>[</code> 문자를 만나면 함수가 호출되도록 할 것입니다; 함수는 <code>]</code> 문자를 만나면 리스트를 반환할 것입니다. 모든 리더 매크로 함수는 두 인수에 의해 호출됩니다: 입력 스트림과 매크로를 작동시키는 문자.</p>
+<p>리스프에는 리스트를 읽을 수 있도록 설계된 함수가 있어, 쉽게 리드 매크로를 만들 수 있었습니다. <code>READ-DELIMITED-LIST</code>는 하나의 인수를 기다립니다 - 현재 읽고 있는 리스트를 종료시키는 문자. 다른 두개의 인자는 선택 사항입니다 - 입력 스트림과 플래그 (리더 매크로 함수에서 사용될땐 보통 T로 설정되는). <code>READ-DELIMITED-LIST</code>는 종료 문자를 마주치기 전까지 입력 스트림에서 오브젝트를 읽은 후, 모든 오브젝트를 리스트로 반환합니다. 이것만으로도 평가를 억제하는 것(suppressing)을 제외한 저희가 필요한 모든것을 수행 할 수 있습니다.</p>
+<p><a href="./lesson_03.html">레슨 3</a>에서 봤던 것 처럼, <code>QUOTE</code> (혹은  <code>'</code>)는 평가를 막습니다. 그러나 여기서 <code>'(READ-DELIMITED-LIST ...)</code>를 사용할 수 없습니다; 이는, 저희가 평가하고자 하는 폼의 평가도 막아버립니다... 대신, <code>quote</code>된 폼에 대해 선택적으로 평가를 할 수 있는  <code>`</code>(<a href="./lesson_08.html">레슨 8</a> 참조)를 사용하였습니다.</p>
+<p>저희 <code>OPEN-BRACKET-MACRO-CHARACTER</code>의 정의에서 내부의 폼을 평가하지만 결과는 <code>quote</code>된 결과를 반환하기 위해</p>
+<p><code>`',form</code></p>
+<p>을 사용하였습니다.</p>
 <ul>
 <li>리스프는 프로그래머를 위해 6개의 문자를 예약하였습니다: <code>[ ] { } ! ?</code></li>
 </ul>
-<p>여러분은 이중 일부나 전체를 리스프의 중재없이 매크로 문자를 정의할 수 있습니다. 그러나, 다른 프로그래머와 코드를 공유하게 된다면, 논쟁이 발생할 수 있다는 점을 주의해야 합니다.</p>
+<p>여러분은 이중 일부나 전체를 매크로 문자를 정의할 수 있습니다. 그러나, 다른 프로그래머와 코드를 공유할때, 논란이 될 수 있다라는 점을 주의하셔야 합니다.</p>
 <h2 id="짚고-넘어가기"><a class="header" href="#짚고-넘어가기">짚고 넘어가기</a></h2>
 <ul>
 <li><code>*readtable*</code></li>
